--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -4,6 +4,22 @@ body {
     overflow: hidden;
   }
   
+  .draggable-div {
+    position: relative;
+   
+
+   
+    color: #fff;
+   
+    padding-left: 20%;
+    padding-top: 40%;
+    cursor: grab;
+  }
+  
+  .draggable-div.dragging {
+    cursor: grabbing;
+  }
+  
   .App {
     height: 100vh;
    
